--- a/web/home.html
+++ b/web/home.html
@@ -20,7 +20,7 @@
 <div class="content" id="content1">
     <div class="user_body">
 
-        <form action="SS" method="post">
+        <form >
             <div class="user">
                 <br>
                 <span class="search_title">按终点站查询</span>
