--- a/web/home.html
+++ b/web/home.html
@@ -8,7 +8,8 @@
     <link href="css/homeCss.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div class="navbar">
+<!--顶部菜单-->
+<div class="navbar" id="navbar">
     <ul>
         <li><a href="#" onclick="showContent('content1')">首页</a></li>
         <li><a href="#" onclick="showContent('content2')">搜索历史</a></li>
