--- a/web/home.html
+++ b/web/home.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <!--顶部菜单-->
-<div class="navbar" id="navbar">
-    <ul>
-        <li><a href="#" onclick="showContent('content1')">首页</a></li>
-        <li><a href="#" onclick="showContent('content2')">搜索历史</a></li>
-        <li><a href="#" onclick="showContent('content3')">订购</a></li>
-        <li><a href="#" onclick="showContent('content4')">联系我们</a></li>
+<div class="navbar" >
+    <ul id="navbar_ul">
+        <li><a class="select" href="#" onclick="showContent('content1')">首页</a></li>
+        <li><a class="select" href="#" onclick="showContent('content2')">搜索历史</a></li>
+        <li><a class="select" href="#" onclick="showContent('content3')">订购</a></li>
+        <li><a class="select" href="#" onclick="showContent('content4')">联系我们</a></li>
     </ul>
 </div>
 <!--主体-->
