--- a/web/manager.html
+++ b/web/manager.html
@@ -78,6 +78,7 @@
             <th>起始站</th>
             <th>到达站</th>
             <th>火车编号</th>
+            <th>购买账户昵称</th>
             <th>选项</th>
         </tr>
         <tr>
@@ -86,6 +87,7 @@
             <td>湘潭</td>
             <td>北京</td>
             <td>1</td>
+            <td>sd</td>
             <td>
                 <button class="row_edit">Edit</button>
                 <button class="row_delete">Delete</button>
