--- a/web/register.html
+++ b/web/register.html
@@ -6,7 +6,7 @@
     <link type="text/css" rel="stylesheet" href="css/registerCss.css">
 </head>
 <body>
-<form  action="loginServlet" method="post">
+<form action="registerServlet" method="post">
     <span>注册账号 </span>
     <div class="user">
         <input class="user_input" type="text" name="name" placeholder="用户名"/>
